--- a/data/export/launchd/launchd.plist.erb
+++ b/data/export/launchd/launchd.plist.erb
@@ -6,7 +6,7 @@
     <string><%= "#{app}-#{name}-#{num}" %></string>
     <key>EnvironmentVariables</key>
     <dict>
-    <%- engine.env.merge("PORT" => port).each_pair do |var,env| -%>
+    <%- engine.env.merge("FOREMAN_PORT" => port).each_pair do |var,env| -%>
         <key><%= var %></key>
         <string><%= env %></string>
     <%- end -%>
